--- a/buildout.cfg
+++ b/buildout.cfg
@@ -19,6 +19,21 @@ eggs =
 # Specific pins
 lizard-flooding =
 # Reported by buildout.dumppickedversions
+collective.recipe.omelette = 0.9
+distribute = 0.6.10
+django-staticfiles = 0.2.0
+django-treebeard = 1.60
+djangorecipe = 0.20
+eazysvn = 1.11.0
+iso8601 = 0.1.4
+lizard-base = 1.6
+nens = 1.0-r9335
+networkx = 1.0.1
+pep8 = 0.5.0
+pyflakes = 0.4.0
+zc.buildout = 1.4.3
+zc.recipe.egg = 1.2.2
+zest.releaser = 3.6
 
 
 [django]
