Slightly modernized buildout (sysegg for GDAL).

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,44 +3,47 @@ index = http://packages.lizardsystem.nl
 unzip = true
 prefer-final = true
 versions = versions
-extensions = buildout.dumppickedversions
+extensions = 
+    mr.developer
+    buildout-versions
 parts =
+    sysegg
     django
     omelette
     console_scripts
     pyflakes
 develop = .
-#         local_checkouts/some_trunk_external
 eggs =
     lizard-flooding
+
+[sysegg]
+# Add eggs here that are best handled through OS-level packages.
+recipe = osc.recipe.sysegg
+force-sysegg = true
+eggs =
+    numpy
+    PIL
+    matplotlib
+#    simplejson
+    pyproj
+    GDAL
 
 
 [versions]
 # Specific pins
 lizard-flooding =
-# Reported by buildout.dumppickedversions
-collective.recipe.omelette = 0.9
-distribute = 0.6.10
-django-staticfiles = 0.2.0
-django-treebeard = 1.60
-djangorecipe = 0.20
-eazysvn = 1.11.0
-iso8601 = 0.1.4
-lizard-base = 1.6
-nens = 1.0-r9335
-networkx = 1.0.1
-pep8 = 0.5.0
-pyflakes = 0.4.0
-zc.buildout = 1.4.3
-zc.recipe.egg = 1.2.2
-zest.releaser = 3.6
-
+buildout-versions = 1.5
 
 [django]
 # Sets up django for testing our application.
 # See http://jacobian.org/writing/django-apps-with-buildout/
+[django]
+# Sets up django for testing our application.
+# See http://jacobian.org/writing/django-apps-with-buildout/
 recipe = djangorecipe
-version = 1.1
+version = 1.2.3
+wsgi = true
+wsgilog = ${buildout:directory}/var/log/django.log
 project = lizard_flooding
 projectegg = lizard_flooding
 settings = testsettings
