--- a/buildout.cfg
+++ b/buildout.cfg
@@ -24,7 +24,7 @@ eggs =
     numpy
     PIL
     matplotlib
-#    simplejson
+    simplejson
     pyproj
     GDAL
 
@@ -32,16 +32,15 @@ eggs =
 [versions]
 # Specific pins
 lizard-flooding =
+zc.buildout = 1.4.4
+zc.recipe.egg = 1.2.2
 buildout-versions = 1.5
+Django = 1.2.3
 
 [django]
 # Sets up django for testing our application.
 # See http://jacobian.org/writing/django-apps-with-buildout/
-[django]
-# Sets up django for testing our application.
-# See http://jacobian.org/writing/django-apps-with-buildout/
 recipe = djangorecipe
-version = 1.2.3
 wsgi = true
 wsgilog = ${buildout:directory}/var/log/django.log
 project = lizard_flooding
