--- a/buildout.cfg
+++ b/buildout.cfg
@@ -36,6 +36,7 @@ zc.buildout = 1.4.4
 zc.recipe.egg = 1.2.2
 buildout-versions = 1.5
 Django = 1.2.3
+GDAL = 1.7.3
 
 [django]
 # Sets up django for testing our application.
