--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,7 +3,7 @@ index = http://packages.lizardsystem.nl
 unzip = true
 prefer-final = true
 versions = versions
-extensions = 
+extensions =
     mr.developer
     buildout-versions
 parts =
@@ -36,7 +36,7 @@ zc.buildout = 1.4.4
 zc.recipe.egg = 1.2.2
 buildout-versions = 1.5
 Django = 1.2.3
-GDAL = 1.7.3
+#GDAL = 1.7.3
 
 [django]
 # Sets up django for testing our application.
