--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,6 +3,8 @@ index = http://packages.lizardsystem.nl
 unzip = true
 prefer-final = true
 versions = versions
+extends =
+    http://packages.lizardsystem.nl/kgs/3.0.11/versions.cfg
 extensions =
     mr.developer
     buildout-versions
@@ -30,13 +32,7 @@ eggs =
 
 
 [versions]
-# Specific pins
 flooding-lib =
-zc.buildout = 1.4.4
-zc.recipe.egg = 1.2.2
-buildout-versions = 1.5
-Django = 1.2.3
-#GDAL = 1.7.3
 
 [django]
 # Sets up django for testing our application.
