--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,6 +14,7 @@ parts =
     omelette
     console_scripts
     pyflakes
+    pylint
 develop = .
 eggs =
      flooding-lib
@@ -73,3 +74,11 @@ eggs =
    pyflakes
 entry-points = pyflakes=pkg_resources:run_script
 arguments = 'pyflakes', 'pyflakes'
+
+[pylint]
+recipe = zc.recipe.egg
+eggs =
+     ${buildout:eggs}
+     pylint
+entry-points = pylint=pylint.lint:Run
+arguments = sys.argv[1:]
