Renamed lizard_visualization to flooding_visualization and lizard_presentation to flooding_presentation

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,6 +3,6 @@ include *.rst
 include *.txt
 # Include everything in our project directory.
 graft flooding_lib
-graft lizard_presentation
-graft lizard_visualization
+graft flooding_presentation
+graft flooding_visualization
 
