Work on Excel import/export.
Started styling data cells in the Excel file (turned wrap on). To do: styling of dates.

Only InputFields relating directly to the current scenario (Scenario,
ScenarioBreach, ExtraScenarioInfo) will be imported. Other fields
(e.g. from Project) will be shown with gray headers for reference in
the Excel file, but ignored by the import.

Screens from exporting and importing Excel screens have been further improved.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -82,3 +82,6 @@ eggs =
      pylint
 entry-points = pylint=pylint.lint:Run
 arguments = sys.argv[1:]
+
+[sources]
+flooding-base = git git@github.com:lizardsystem/flooding-base.git
