--- a/buildout.cfg
+++ b/buildout.cfg
@@ -85,3 +85,4 @@ arguments = sys.argv[1:]
 
 [sources]
 flooding-base = git git@github.com:lizardsystem/flooding-base.git
+flooding-worker = git git@github.com:lizardsystem/flooding-worker.git
