--- a/buildout.cfg
+++ b/buildout.cfg
@@ -33,6 +33,7 @@ eggs =
 
 [versions]
 flooding-lib =
+lizard-worker = 
 
 [django]
 # Sets up django for testing our application.
@@ -85,4 +86,4 @@ arguments = sys.argv[1:]
 
 [sources]
 flooding-base = git git@github.com:lizardsystem/flooding-base.git
-flooding-worker = git git@github.com:lizardsystem/flooding-worker.git
+lizard-worker = git git@github.com:lizardsystem/lizard-worker.git
