--- a/buildout.cfg
+++ b/buildout.cfg
@@ -33,7 +33,19 @@ eggs =
 
 [versions]
 flooding-lib =
-lizard-worker = 
+Markdown = 2.2.0
+buildout-versions = 1.5.0
+django-debug-toolbar = 0.9.4
+factory-boy = 1.1.5
+flooding-base = 1.35
+lizard-raster = 0.3
+lizard-worker = 0.10
+lizard-worker = 0.10
+mock = 0.8.0
+nens = 1.11
+pb.recipes.pydev = 0.4.5
+pika = 0.9.8
+sitesetup = 0.1
 threedilib = 0.6
 
 [django]
