PNG generation for gridta results now corrects for the actual start time of the breach.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -47,6 +47,7 @@ pb.recipes.pydev = 0.4.5
 pika = 0.9.8
 sitesetup = 0.1
 threedilib = 0.6
+netCDF4 = 1.0.4
 
 [django]
 # Sets up django for testing our application.
