Add a function to add rasters, simple tests

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -102,3 +102,4 @@ arguments = sys.argv[1:]
 [sources]
 flooding-base = git git@github.com:lizardsystem/flooding-base.git
 lizard-worker = git git@github.com:lizardsystem/lizard-worker.git
+gislib = git git@github.com:nens/gislib.git
