--- a/buildout.cfg
+++ b/buildout.cfg
@@ -103,3 +103,4 @@ arguments = sys.argv[1:]
 flooding-base = git git@github.com:lizardsystem/flooding-base.git
 lizard-worker = git git@github.com:lizardsystem/lizard-worker.git
 gislib = git git@github.com:nens/gislib.git
+threedilib = git git@github.com:lizardsystem/threedilib.git
