New buildout, new versions

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,13 +1,10 @@
 [buildout]
 index = http://packages.lizardsystem.nl
-unzip = true
 prefer-final = true
-versions = versions
 extends =
-    http://packages.lizardsystem.nl/kgs/3.0.11/versions.cfg
+    http://packages.lizardsystem.nl/kgs/latest.cfg
 extensions =
     mr.developer
-    buildout-versions
 parts =
     sysegg
     django
@@ -21,34 +18,33 @@ eggs =
 
 [sysegg]
 # Add eggs here that are best handled through OS-level packages.
-recipe = osc.recipe.sysegg
+recipe = syseggrecipe
 force-sysegg = true
 eggs =
     numpy
-    PIL
-    matplotlib
-    pyproj
     GDAL
 
-
 [versions]
-Django = 1.4.8
 flooding-lib =
+Django = 1.6.5
 Markdown = 2.2.0
-buildout-versions = 1.5.0
+django-compressor = 1.4
 django-debug-toolbar = 0.9.4
-factory-boy = 1.1.5
+django-extensions = 1.3.8
+django-nose = 1.2
+djangorecipe = 1.10
+factory-boy =
 flooding-base = 1.35
+itsdangerous =
 lizard-raster = 0.3
-lizard-worker = 0.10
 lizard-worker = 0.10
 mock = 0.8.0
 nens = 1.11
+netCDF4 = 1.0.4
 pb.recipes.pydev = 0.4.5
 pika = 0.9.8
 sitesetup = 0.1
-threedilib = 0.6
-netCDF4 = 1.0.4
+zc.buildout = 2.0.1
 
 [django]
 # Sets up django for testing our application.
@@ -103,4 +99,3 @@ arguments = sys.argv[1:]
 flooding-base = git git@github.com:lizardsystem/flooding-base.git
 lizard-worker = git git@github.com:lizardsystem/lizard-worker.git
 gislib = git git@github.com:nens/gislib.git
-threedilib = git git@github.com:lizardsystem/threedilib.git
