Update bootstrap and buildout for realse.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -21,33 +21,54 @@ eggs =
 recipe = syseggrecipe
 force-sysegg = true
 eggs =
-    numpy
-    GDAL
-    matplotlib
-    nose
-
+     numpy
+     scipy
+     GDAL
+     matplotlib
 
 [versions]
-flooding-lib =
-Django = 1.6.5
+Flask = 0.10.1
 Markdown = 2.2.0
+Pillow = 2.5.1
+astroid = 1.1.1
+collective.recipe.supervisor = 0.19
+django-appconf = 0.6
 django-compressor = 1.4
 django-debug-toolbar = 0.9.4
+django-excel-response = 1.0
 django-extensions = 1.3.8
+django-markdown-deux = 1.0.4
 django-nose = 1.2
 djangorecipe = 1.10
-factory-boy =
-flooding-base = 1.35
-itsdangerous =
+factory-boy = 2.4.1
+flooding =
+flooding-lib =
+gunicorn = 19.0.0
+itsdangerous = 0.24
 lizard-raster = 0.3
 lizard-worker = 0.11
+logilab-common = 0.62.0
+markdown2 = 2.2.1
+matplotlib =
 mock = 0.8.0
-nens = 1.11
-netCDF4 = 1.0.4
+nens = 1.12
+netcdf4 = 1.0.4
+nose = 1.3.3
 pb.recipes.pydev = 0.4.5
 pika = 0.9.8
-sitesetup = 0.1
-zc.buildout = 2.0.1
+pylint = 1.2.1
+pyparsing = 1.5.6
+pyproj = 1.9.3
+raven = 5.0.0
+setuptools = 18.2
+sitesetup = 0.11
+six = 1.7.3
+syseggrecipe = 1.2
+xlrd = 0.9.3
+xlwt = 0.7.5
+z3c.recipe.usercrontab = 1.1
+zc.buildout = 2.4.3
+zc.recipe.egg = 2.0.2
 
 [django]
 # Sets up django for testing our application.
