Unping GChartWrapper due buildout.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -69,6 +69,7 @@ xlwt = 0.7.5
 z3c.recipe.usercrontab = 1.1
 zc.buildout = 2.4.3
 zc.recipe.egg = 2.0.2
+GChartWrapper =
 
 [django]
 # Sets up django for testing our application.
