Update buildout for use with global buildout.

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,19 @@
-.installed.cfg
-bin
-develop-eggs
+*.*~
 *.egg-info
 *.pyc
-*.*~
-parts
-dist
-nosetests.xml
-.mr.developer.cfg
-test.db
 .#*
-ignore
 .coverage
+.installed.cfg
+.mr.developer.cfg
+bin
+develop-eggs
+dist
+eggs
 htmlcov
-src
+ignore
 localsettings.py
+nosetests.xml
+parts
+src
+test.db
 var
