Streamlining the setup.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,6 +3,8 @@ index = http://packages.lizardsystem.nl
 prefer-final = true
 extensions =
     mr.developer
+auto-checkout =
+    gislib
 parts =
     sysegg
     django
@@ -18,7 +20,7 @@ recipe = syseggrecipe
 force-sysegg = true
 eggs =
     gdal
-#   mapnik = 2.2.0 deliberately not here, buildout / syseggrecipe don't work
+#   mapnik deliberately not here, buildout / syseggrecipe don't work
 
 [versions]
 # Specific pins
@@ -27,7 +29,6 @@ Django = 1.6.6
 
 # Syseggs
 gdal =
-#   mapnik deliberately not here, buildout / syseggrecipe don't work
 
 # Reported by buildout
 Flask = 0.10.1
@@ -141,6 +142,6 @@ eggs =
 
 
 [sources]
-flooding-base = git git@github.com:lizardsystem/flooding-base.git
-lizard-worker = git git@github.com:lizardsystem/lizard-worker.git
-gislib = git git@github.com:nens/gislib.git
+gislib = git https://github.com/nens/gislib.git branch=flooding-branch
+lizard-worker = git https://github.com/lizardsystem/lizard-worker.git
+lizard-raster = git https://github.com/lizardsystem/lizard-raster.git
