Replace psycopg2-binary because of segfaults on server.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -21,6 +21,7 @@ recipe = syseggrecipe
 force-sysegg = true
 eggs =
     gdal
+    psycopg2
 #   mapnik deliberately not here, buildout / syseggrecipe don't work
 
 [versions]
@@ -30,6 +31,7 @@ Django = 1.6.6
 
 # Syseggs
 gdal =
+psycopg2 =
 
 # Reported by buildout
 astroid = 1.1.1
@@ -94,7 +96,6 @@ pexpect = 4.6.0
 pickleshare = 0.7.5
 pika = 0.10.0
 Pillow = 5.3.0
-psycopg2-binary = 2.7.6.1
 pycodestyle = 2.4.0
 pycrypto = 2.6.1
 pyflakes = 2.0.0
