--- a/buildout.cfg
+++ b/buildout.cfg
@@ -51,14 +51,17 @@ coverage = 4.5.2
 cycler = 0.10.0
 decorator = 4.3.0
 django-appconf = 0.6
+django-celery = 3.0.21
 django-compressor = 1.4
 django-debug-toolbar = 0.9.4
 django-excel-response = 1.0
 django-extensions = 1.3.8
+django-kombu = 0.9.4
 django-markdown-deux = 1.0.4
 django-nose = 1.2
 djangorecipe = 1.10
 django-treebeard = 3.0
+djcelery = 3.0.21
 ecdsa = 0.13
 enum34 = 1.1.6
 factory-boy = 2.4.1
