Sync pins to flooding repo.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -34,12 +34,28 @@ gdal =
 psycopg2 =
 
 # Reported by buildout
+Flask = 0.10.1
+Jinja2 = 2.10
+Markdown = 2.2.0
+MarkupSafe = 1.1.0
+Pillow = 5.3.0
+Pygments = 2.3.1
+Shapely = 1.6.4.post2
+South = 1.0.2
+Werkzeug = 0.14.1
+amqp = 1.0.13
+anyjson = 0.3.3
 astroid = 1.1.1
 backports-abc = 0.4
 backports.functools-lru-cache = 1.5
 backports.shutil-get-terminal-size = 1.0.0
 backports.ssl-match-hostname = 3.5.0.1
+billiard = 2.7.3.34
+bleach = 3.1.0
+celery = 3.0.25
+certifi = 2018.11.29
 cftime = 1.0.3.4
+chardet = 3.0.4
 cns.recipe.symlink = 0.2.3
 collective.recipe.omelette = 0.16
 collective.recipe.supervisor = 0.19
@@ -59,29 +75,29 @@ django-extensions = 1.3.8
 django-kombu = 0.9.4
 django-markdown-deux = 1.0.4
 django-nose = 1.2
-djangorecipe = 1.10
 django-treebeard = 3.0
+djangorecipe = 1.10
 djcelery = 3.0.21
+docutils = 0.14
+eazysvn = 1.15.0
 ecdsa = 0.13
 enum34 = 1.1.6
 factory-boy = 2.4.1
 flake8 = 3.6.0
-Flask = 0.10.1
 gunicorn = 19.0.0
+idna = 2.8
 ipython = 5.8.0
 ipython-genutils = 0.2.0
 iso8601 = 0.1.12
 itsdangerous = 0.24
 iw.recipe.cmd = 0.3
-Jinja2 = 2.10
 kiwisolver = 1.0.1
+kombu = 2.5.16
 lizard-raster = 0.3
 lizard-worker = 0.12
 logilab-common = 0.62.0
 # mapnik = 2.2.0 deliberately not here, buildout / syseggrecipe don't work
-Markdown = 2.2.0
 markdown2 = 2.2.1
-MarkupSafe = 1.1.0
 matplotlib = 2.2.3
 mccabe = 0.6.1
 meld3 = 1.0.2
@@ -95,10 +111,13 @@ numpy = 1.15.4
 paramiko = 1.16.0
 pathlib2 = 2.3.3
 pb.recipes.pydev = 0.4.5
+pep8 = 1.7.1
 pexpect = 4.6.0
 pickleshare = 0.7.5
 pika = 0.10.0
-Pillow = 5.3.0
+pkginfo = 1.5.0.1
+prompt-toolkit = 1.0.15
+ptyprocess = 0.6.0
 pycodestyle = 2.4.0
 pycrypto = 2.6.1
 pyflakes = 2.0.0
@@ -108,24 +127,29 @@ python-dateutil = 2.5.2
 python-memcached = 1.59
 pytz = 2018.7
 raven = 6.1.0
+readme-renderer = 24.0
 requests = 2.21.0
+requests-toolbelt = 0.9.1
 scandir = 1.9.0
 scipy = 1.1.0
-Shapely = 1.6.4.post2
+simplegeneric = 0.8.1
 singledispatch = 3.4.0.3
 six = 1.11.0
-South = 1.0.2
 subprocess32 = 3.5.3
 supervisor = 3.3.4
 syseggrecipe = 1.5.1
 tornado = 4.3
+tqdm = 4.31.1
+traitlets = 4.3.2
+twine = 1.13.0
+urllib3 = 1.24.1
 wcwidth = 0.1.7
 webencodings = 0.5.1
-Werkzeug = 0.14.1
 xlrd = 0.9.3
 xlwt = 0.7.5
 z3c.recipe.mkdir = 0.7
 zc.recipe.egg = 2.0.7
+zest.releaser = 6.17.0
 
 
 [django]
